# AnyBak

./: CMakeLists.txt  README.md
DevelopmentArtefacts/: a1.txt
code/: CMakeLists.txt
code/cfg_in/: Paths.hpp
code/src/: Artefact.cpp  Artefact.hh  Artefact.hpp  Artefact.hxx  ArtefactName.cpp  ArtefactName.hh  ArtefactName.hpp  ArtefactName.hxx  ArtefactSet.cpp  ArtefactSet.hh  ArtefactSet.hpp  ArtefactSet.hxx  DevelopmentProfile.cpp  DevelopmentProfile.hpp  DevelopmentProfile.hxx  Profile.cpp  Profile.hh  Profile.hpp  Profile.hxx  RuleSet.cpp  RuleSet.hh  RuleSet.hpp  RuleSet.hxx  Volume.hh  Volume.hpp  Volume.hxx  VolumeRegistry.cpp  VolumeRegistry.hh  VolumeRegistry.hpp  VolumeRegistry.hxx  VolumeSet.cpp  VolumeSet.hh  VolumeSet.hpp  VolumeSet.hxx  main.cpp
devdocs/: first-notes.txt
